<resources>
    <string name="app_name">BroadClass</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email Address</string>
    <string name="minimum_password">Password too short, enter a minimum of 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register for an account</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register">Not a member? Register here</string>
    <string name="btn_link_to_login">Already a member? Login here</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_confirm_new_email">Confirm Email</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_old_email">Old Email</string>
    <string name="hint_new_password">New Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your email to request a password reset.</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="error_invalid_confirm_email">This email does not match your new email.</string>
    <string name="error_invalid_old_email">This email does not match your current email for this account.</string>
    <string name="error_same_email">This email is the same as your previous email.</string>
    <string name="error_invalid_email">This email is invalid.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_same_password">This password is the same as your previous password.</string>
    <string name="error_invalid_confirm_password">This password does not match your new password.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="class_fragment_title">Classes</string>
    <string name="group_fragment_title">Groups</string>
    <string name="contact_fragment_title">Contacts</string>
    <string name="pref_header_general">Settings</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="btn_members">Members</string>
    <string name="edit_message">Type a message</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="user_bio"><b>User bio: </b></string>
    <string name="hint_user_bio_description">Enter bio information</string>
    <string name="class_title">Class title</string>
    <string name="hint_class_description">Enter class description</string>
    <string name="hint_class_title">Enter class title</string>
    <string name="new_class">New Class</string>
    <string name="search">Search</string>
    <string name="join">Join</string>
</resources>